gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-static-nobundle.rs
#[link(name="foo", kind="static-nobundle")]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
extern {}

fn main() {}

